# SpartanEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  TODO  generate_gmake2_vulkan.sh  generate_linux.sh  nsp-notes.md  vcpkg.json
build_scripts/: Dockerfile-arch  generate_project_files.sh  install-fedora-deps.sh  linux-gcc-cpu-only.xml  premake-linux.lua  premake.lua
cmake/: editor-file-list.cmake  runtime-file-list.cmake
editor/: CMakeLists.txt  GeneralWindows.cpp
editor/ImGui/: ImGuiExtension.h  ImGui_Extension.h
editor/ImGui/Implementation/: ImGui_RHI.h  imgui_impl_sdl2.cpp
editor/Widgets/: IconLoader.cpp  ProgressDialog.cpp  Properties.cpp  RenderOptions.cpp  ResourceViewer.cpp  ShaderEditor.cpp  TitleBar.cpp  WorldViewer.cpp
runtime/: CMakeLists.txt
runtime/Core/: Definitions.h  Event.cpp  FileSystem.cpp  FileSystem.h  ProgressTracker.h  ThreadPool.cpp  Window.cpp  Window.h
runtime/Display/: Display.cpp
runtime/Game/: Game.cpp
runtime/Input/: Input.cpp  InputController.cpp  InputKeyboard.cpp  InputMouse.cpp
runtime/Math/: Rectangle.h
runtime/Profiling/: Profiler.cpp
runtime/RHI/: RHI_Definition.h  RHI_DirectXShaderCompiler.h  RHI_Implementation.h  RHI_Texture.cpp
runtime/RHI/D3D11/: D3D11_SwapChain.cpp
runtime/RHI/Vulkan/: Vulkan_CommandList.cpp  Vulkan_Device.cpp  Vulkan_SwapChain.cpp  Vulkan_Utility.h
runtime/Rendering/: Renderer.cpp  Renderer_Resources.cpp
runtime/Resource/: IResource.cpp  IResource.h  ResourceCache.cpp
runtime/Resource/Import/: FontImporter.cpp  ImageImporter.cpp  ModelImporter.cpp
runtime/World/: World.cpp
runtime/World/Components/: Component.cpp  Component.h  PhysicsBody.cpp
source/editor/: CMakeLists.txt
source/editor/Widgets/: FileDialog.cpp  ShaderEditor.cpp
source/runtime/: CMakeLists.txt
source/runtime/Core/: Debugging.h  Window.cpp
source/runtime/FileSystem/: FileSystem.cpp
source/runtime/Game/: Game.cpp
source/runtime/Geometry/: GeometryProcessing.h
source/runtime/Logging/: Log.cpp
source/runtime/Math/: Matrix.cpp  Quaternion.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
source/runtime/Memory/: MemoryOverrides.h
source/runtime/Physics/: PhysicsWorld.cpp
source/runtime/RHI/: RHI_PhysicalDevice.cpp  RHI_PhysicalDevice.h
source/runtime/RHI/Vulkan/: Vulkan_SwapChain.cpp  Vulkan_Texture.cpp  Vulkan_VendorTechnology.cpp
source/runtime/Rendering/: Renderer_Resources.cpp
source/runtime/Resource/: ResourceCache.cpp
source/runtime/Resource/Import/: ImageImporter.cpp
source/runtime/World/: Entity.h  World.cpp
source/runtime/World/Components/: Physics.cpp
