set(LIBRARY_SRC
        Audio/Audio.cpp
        Audio/AudioClip.cpp
        Commands/CommandStack.cpp
        Commands/CommandTransform.cpp
        Core/Engine.cpp
        Core/Event.cpp
        Core/FileSystem.cpp
        Core/ProgressTracker.cpp
        Core/Settings.cpp
        Core/SpObject.cpp
        Core/ThreadPool.cpp
        Core/Timer.cpp
        Core/Window.cpp
        Display/Display.cpp
        IO/FileStream.cpp
        IO/pugixml.cpp
        Input/Input.cpp
        Input/InputGamepad.cpp
        Input/InputKeyboard.cpp
        Input/InputMouse.cpp
        Input/InputSteeringWheel.cpp
        Logging/Log.cpp
        Math/BoundingBox.cpp
        Math/Frustum.cpp
        Math/Matrix.cpp
        Math/Plane.cpp
        Math/Quaternion.cpp
        Math/Ray.cpp
        Math/Rectangle.cpp
        Math/Sphere.cpp
        Math/Vector2.cpp
        Math/Vector3.cpp
        Math/Vector4.cpp
        Physics/Car.cpp
        Physics/Physics.cpp
        Physics/PhysicsDebugDraw.cpp
        Profiling/Profiler.cpp
        Profiling/RenderDoc.cpp
        Profiling/TimeBlock.cpp
        RHI/RHI_CommandList.cpp
        RHI/RHI_DescriptorSet.cpp
        RHI/RHI_DescriptorSetLayout.cpp
        RHI/RHI_Device.cpp
        RHI/RHI_Implemenation.cpp
        RHI/RHI_PhysicalDevice.cpp
        RHI/RHI_PipelineState.cpp
        RHI/RHI_Sampler.cpp
        RHI/RHI_Shader.cpp
        RHI/RHI_Texture.cpp
        RHI/RHI_Viewport.cpp
        RHI/Vulkan/Vulkan_BlendState.cpp
        RHI/Vulkan/Vulkan_CommandList.cpp
        RHI/Vulkan/Vulkan_ConstantBuffer.cpp
        RHI/Vulkan/Vulkan_DepthStencilState.cpp
        RHI/Vulkan/Vulkan_DescriptorSet.cpp
        RHI/Vulkan/Vulkan_DescriptorSetLayout.cpp
        RHI/Vulkan/Vulkan_Device.cpp
        RHI/Vulkan/Vulkan_Fence.cpp
        RHI/Vulkan/Vulkan_FidelityFX.cpp
        RHI/Vulkan/Vulkan_IndexBuffer.cpp
        RHI/Vulkan/Vulkan_InputLayout.cpp
        RHI/Vulkan/Vulkan_Pipeline.cpp
        RHI/Vulkan/Vulkan_RasterizerState.cpp
        RHI/Vulkan/Vulkan_Sampler.cpp
        RHI/Vulkan/Vulkan_Semaphore.cpp
        RHI/Vulkan/Vulkan_Shader.cpp
        RHI/Vulkan/Vulkan_StructuredBuffer.cpp
        RHI/Vulkan/Vulkan_SwapChain.cpp
        RHI/Vulkan/Vulkan_Texture.cpp
        RHI/Vulkan/Vulkan_VertexBuffer.cpp
        Rendering/Animation.cpp
        Rendering/Color.cpp
        Rendering/Font/Font.cpp
        Rendering/Material.cpp
        Rendering/Mesh.cpp
        Rendering/Renderer.cpp
        Rendering/Renderer_Passes.cpp
        Rendering/Renderer_Primitives.cpp
        Rendering/Renderer_Resources.cpp
        Rendering/meshoptimizer/allocator.cpp
        Rendering/meshoptimizer/clusterizer.cpp
        Rendering/meshoptimizer/indexcodec.cpp
        Rendering/meshoptimizer/indexgenerator.cpp
        Rendering/meshoptimizer/overdrawanalyzer.cpp
        Rendering/meshoptimizer/overdrawoptimizer.cpp
        Rendering/meshoptimizer/simplifier.cpp
        Rendering/meshoptimizer/spatialorder.cpp
        Rendering/meshoptimizer/stripifier.cpp
        Rendering/meshoptimizer/vcacheanalyzer.cpp
        Rendering/meshoptimizer/vcacheoptimizer.cpp
        Rendering/meshoptimizer/vertexcodec.cpp
        Rendering/meshoptimizer/vertexfilter.cpp
        Rendering/meshoptimizer/vfetchanalyzer.cpp
        Rendering/meshoptimizer/vfetchoptimizer.cpp
        Resource/IResource.cpp
        Resource/Import/FontImporter.cpp
        Resource/Import/ImageImporterExporter.cpp
        Resource/Import/ModelImporter.cpp
        Resource/ResourceCache.cpp
        World/Components/AudioListener.cpp
        World/Components/AudioSource.cpp
        World/Components/Camera.cpp
        World/Components/Component.cpp
        World/Components/Constraint.cpp
        World/Components/Light.cpp
        World/Components/PhysicsBody.cpp
        World/Components/Renderable.cpp
        World/Components/Terrain.cpp
        World/Entity.cpp
        World/World.cpp
)

set(LIBRARY_HEADERS
	Core/pch.h
)

add_library(runtime ${LIBRARY_SRC} ${LIBRARY_HEADERS})
add_library(spartan::runtime ALIAS runtime)
target_include_directories(runtime PUBLIC Core)
